--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -31,13 +31,13 @@
     "Analizując schemat przejścia cząstki przez detektor, obserwujemy proces rozwoju kaskady elektromagnetycznej w układzie wielowarstwowym. \n",
     "- Kąt padania: cząstka (pozyton) wpada do detektora pod określonym kątem względem osi prostopadłej do powierzchni czołowej. W zależności od zestawu danych, kąt ten może wynosić $0^\\circ$ (padanie prostopadłe) lub być odchylony w zakresie $\\pm 10^\\circ$ / $\\pm 20^\\circ$.\n",
     "- Punkt uderzenia: miejsce interakcji cząstki pierwotnej z pierwszą warstwą detektora (współrzędne $x, y$).\n",
-    "- Struktura warstwowa: Widzimy, że detektor nie jest jednolitym blokiem, lecz składa się z 25 odseparowanych warstw. Cząstka, penetrując kolejne warstwy, traci energię w absorberze i generuje cząstki wtórne, których ślad jest próbkowany przez warstwy krzemu.\n",
+    "- Struktura warstwowa: widzimy, że detektor nie jest jednolitym blokiem, lecz składa się z 25 odseparowanych warstw. Cząstka, penetrując kolejne warstwy, traci energię w absorberze i generuje cząstki wtórne, których ślad jest próbkowany przez warstwy krzemu.\n",
     "\n",
     "### Szczegółowa budowa warstwy (\"kanapka\" wolfram-krzem) \n",
     "\n",
-    "Każda z 25 warstw składa się z dwóch kluczowych elementów: \n",
+    "Każda z 25 warstw składa się z trzech kluczowych elementów: \n",
     "- Absorber (wolfram): płyta o grubości 3.5 mm (oś $Z$).  To tutaj zachodzą główne interakcje cząstki z materią i rozwój kaskady.\n",
-    "- Sensor (krzem):  cienka warstwa detekcyjna o grubości 320 µm (oś $Z$). Służy do pomiaru ładunku wygenerowanego przez przelatujące cząstki. \n",
+    "- Szczelina montażowa: cienka warstwa o grubości 1mm, w której umieszczone są sensory krzemowe (warstwa detekcyjna) o grubości 320 $\\mu m$ (oś Z)\n",
     "\n",
     "**Geometria i wymiary**  \n",
     "\n",
@@ -58,8 +58,7 @@
     "### Wyidealizowany model kalorymetru \n",
     "Symulacja Monte Carlo, na której pracujemy, odwzorowuje wyidealizowany kalorymetr. Oznacza to, że wirtualny model jest pozbawiony niedoskonałości technicznych, które występowały w rzeczywistym prototypie. \n",
     "- Pełna sprawność kanałów: w symulacji zakładamy, że wszystkie kanały działają, co oznacza brak martwych pikseli i uszkodzonej elektroniki – każdy fragment krzemu poprawnie rejestruje energię.\n",
-    "- Głębokość detektora: model symulacyjny jest \"głębszy\" – posiada 25 warstw, co pozwala na pełniejsze zarejestrowanie profilu kaskady \n",
-    "- Brak przerw: w symulacji cała powierzchnia warstwy detekcyjnej jest aktywna. W rzeczywistości między sensorami występują techniczne przerwy montażowe, w których cząstki nie są wykrywane. Stąd też, pełne wymiary wyidealizowanego modelu kalorymetru to 540 mm $\\times$ 90 mm $\\times $ 95,5 mm"
+    "- Głębokość detektora: model symulacyjny jest \"głębszy\" – posiada 25 warstw, co pozwala na pełniejsze zarejestrowanie profilu kaskady. Stąd też, pełne wymiary wyidealizowanego kalorymetru to 540 mm $\\times$ 90 mm $\\times$ 112.5 mm "
    ]
   },
   {
@@ -83,27 +82,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdc6e311",
+   "id": "5250cdfb",
    "metadata": {},
    "source": [
     "# Etapy realizacji zadania \n",
-    "**Etap I: Rekonstrukcja samej pozycji (kalibracja)**  \n",
-    "Celem tego etapu było znalezienie optymalnych parametrów pracy algorytmu w warunkach idealnych (prostopadłe padanie cząstki). Przeprowadzono optymalizację parametru $E_{cut}$, czyli progu odcięcia energii, aby wyeliminować wpływ szumu na precyzję wyznaczania położenia.\n",
     "\n",
+    "**Etap I: Rekonstrukcja samej pozycji**  \n",
+    "\n",
+    "Celem tego etapu było znalezienie optymalnych parametrów pracy algorytmu w warunkach idealnych (prostopadłe padanie cząstki). Przeprowadzono optymalizację parametru $E_{cut}$, czyli progu odcięcia energii, w celu wyeliminowania wpływu szumu elektroniki i ogonów kaskady na precyzję wyznaczania poprzecznego położenia (X, Y) rdzenia uderzenia.\n",
     "\n",
     "**ETAP II: Rekonstrukcja kierunku (analiza kątowa)**  \n",
-    "W tym etapie rozszerzono analizę o trzeci wymiar (głębokość detektora), aby odtworzyć tor lotu cząstki. \n",
-    " - Wykorzystano zbiory danych z rozmyciem kątowym `output_10` ($\\pm 10^\\circ$) oraz `output_20` ($\\pm 20^\\circ$)\n",
-    " - Wyznaczono środek ciężkości kaskady niezależne dla każdej warstwy detektora, z wykorzystaniem wartości $E_{cut}$ wyznaczonej w etapie I\n",
-    " - Wyznaczono trajektorię cząstki poprzez dopasowanie linii prostej do danych \n",
-    " - Zbadano korelację między głębokością penetracji kaskady (liczbą aktywnych warstw) a precyzją rekonstrukcji kąta. Zweryfikowano hipotezę, że dłuższy ślad w detektorze przekłada się na mniejszą niepewność pomiarową."
+    "\n",
+    "W tym etapie rozszerzono analizę o trzeci wymiar (głębokość detektora Z), aby odtworzyć tor lotu cząstki, wykorzystując fakt budowy segmentowej kalorymetru. \n",
+    " - Wykorzystano zbiory danych z rozmyciem kątowym `output_10` ($\\pm 10^\\circ$) oraz `output_20` ($\\pm 20^\\circ$).\n",
+    " - Zrezygnowano z wysokich wartości $E_{cut}$ wyznaczonych w Etapie I na rzecz znacznie obniżonego progu odcięcia ($0.5$ MIP). Pozwoliło to na wydłużenie obserwowalnego śladu kaskady. Aby zrekompensować wpuszczenie szumu z obrzeży, zastosowano algorytm klasteryzacji, zawężający obliczenia środka ciężkości tylko do bezpośredniego sąsiedztwa najsilniejszego sygnału w każdej warstwie.\n",
+    " - Wyznaczono trajektorię cząstki poprzez ważone dopasowanie linii prostej do wyznaczonych punktów, przypisując większe znaczenie warstwom o silniejszym, wyraźniejszym depozycie energii.\n",
+    " - Zbadano korelację między głębokością penetracji kaskady (liczbą aktywnych warstw) a precyzją rekonstrukcji kąta. Zweryfikowano hipotezę, że dłuższy ślad w detektorze przekłada się na znacznie mniejszą niepewność pomiarową, a sam algorytm pozostaje stabilny nawet przy dużych wychyleniach wiązki."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3f48cb41",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
